[package]
name = "actions-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["blocking"] }
serde = "1.0.197"
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
