[package]
name = "actions-core2"
description = "✅ Get inputs, set outputs, and other basic operations for GitHub Actions"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcbhmr/actions-toolkit.rs"
homepage = "https://docs.rs/actions-core2"

[lib]
name = "actions_core"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
